<resources>
    <string name="app_name">fragmentExample</string>
    <string name="user_name">tarun</string>
    <string name="user_password">tarun@123</string>
    <string name="login_preference">com.example.fragmentexample_login_preference</string>
    <string name="login_status_preference">com.example.fragmentexample_login_status_preference</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello_world">Hello World</string>
    <string name="update_contact_label">Update New Contact</string>
    <string name="update_id_label">Enter Contact ID</string>
    <string name="update_name_label">Enter Name</string>
    <string name="update_email_label">Enter Email</string>
    <string name="update_btn">Update Contact</string>
    <string name="label_delete_contact">Delete Contact</string>
    <string name="delete_contact_id">Contact ID</string>
</resources>
